* Fix installer functions so they upgrade/install properly.
* Fix bug in imageid setting for full host registration.
* Fix installer issues from moving commons/config.php to
lib/fog/Config.class.php
* Add ability to adjust timeout values on login system or remove them
completely.
* Fix Storage Node/Image Replicator so it only replicates to enabled nodes.

Version 1.1.1
-------------

* Add xfs filesystem imaging support.
* Fix bug in Post_Stage3.php so task completetion happens properly.
* All MAC's are now objects of the MACAddress class.
* Add Win 8.1 OSID as drivers and such can be different from Win 8.
* Added snapcheck.php for hopeful transition to using init to stage snapins.
* Add multiple NIC MACs sent to find host.
* SVN Trunk versions now have SVN Rev for Version for better support.
* Fix Multicast Group issues.
* Fix changing image default group if there is no master node in the group.

Version 1.1.0
-------------

* Hooks and Plugins are now able to work together.
* Hooks are autoloaded properly now.
* Plugins are autoloaded as well as their pages.
* All pages are now auto registered rather than being registered
** within their files.
* Added ability to QUICKREG elements to add system to a group.
* Added ability to add host to group during full registration.
* Moved Plugins from management/plugins to lib/plugins.
* Fixes for Printer Management and Client Updater
* Adds ability to image logical/extended partitions now.
* Fixes the location plugin.
* Install script now asks for mysql password.
* Install script waits for schema update to be performed.
* Kernel Updater from GUI fixed.
* undionly still in use, but provides multiple choices.
** undionly.kpxe, undionly.kkpxe, ipxe.pxe, ipxe.kpxe, ipxe.kkpxe
** If one isn't working try another.  Most should have success with
** undionly.kpxe.  VirtualBox will work with any of the ipxe. files.
* Database backend no longer requires init.database.php.  Used modern
** methods to keep compatibility into the future.